--- a/Restraunt_ContactUs.html
+++ b/Restraunt_ContactUs.html
@@ -60,11 +60,11 @@
 		<form action = "submit.html" method = "post"> 
 		<div style = "font-weight: bold">
 			<label for "Name">  Name: </label>
-				<input type = "text" id = "Name" name = "Name" required> <br />
+				<input type = "text" class = "form-control" placeholder = "Enter name please" id = "Name" name = "Name" required> <br />
 			<label for "E-mail"> E-mail: </label> 
-				<input type = "text" id = "E-mail" name = "E-mail" required> <br />
+				<input type = "email" class = "form-control" placeholder = "Enter E-mail please" id = "E-mail" name = "E-mail" required> <br />
 			<label for "Phone"> Phone Number: </label> 
-				<input type = "text" id = "Phone" name = "Phone" required> <br /> <br />
+				<input type = "number" class = "form-control" placeholder = "Enter phone number please" id = "Phone" name = "Phone" required> <br /> <br />
 			</div>
 			
 			<label for "Inquiry"> Reason for Inquiry: </label>
@@ -76,7 +76,7 @@
 				</select> <br /> <br />
 				
 			<label for "Info"> Additional Information </label> <br>
-				<textarea id = "Info"> </textarea> <br />
+				<textarea class = "form-control" id = "Info"> </textarea> <br />
 		
 		<br />
 			<label for "returnCustomer"> Have you been to the Restaurant? </label>
